--- a/Frontend/Atividades/atividade06/src/components/commom/Comentario/styles.css
+++ b/Frontend/Atividades/atividade06/src/components/commom/Comentario/styles.css
@@ -1,19 +1,18 @@
 .card-comentario {
-  display: flex;
-  flex-direction: column;
-  border-bottom: 3px solid white;
-  width: 100%;
-  margin: 15px 0px 15px 0px;
-  padding: 15px;
-  border-radius: 10px;
+  display: block;
+  background: rgb(202, 230, 244);
+  padding: 24px;
+  border-radius: 8px;
+  position: relative;
+  margin-bottom: 16px;
 }
 
-.card-comentario .title-comentario {
-  font-weight: bold;
-  margin: 10px;
+.card-comentario h1 {
+  color: #fff;
 }
 
-.card-comentario .content-comentario {
-  margin: 10px;
-  font-style: italic;
+.card-comentario p {
+  color: rgb(161, 159, 159);
+  line-height: 21px;
+  font-size: 16px;
 }
