--- a/Frontend/Atividades/atividade06/src/components/commom/LinhaDoTempo/styles.css
+++ b/Frontend/Atividades/atividade06/src/components/commom/LinhaDoTempo/styles.css
@@ -1,8 +1,10 @@
 .posts {
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
   align-items: center;
-  justify-content: flex-start;
+  justify-items: center;
+  align-content: space-between;
+  justify-content: space-between;
   width: 100%;
-  height: 100vh;
 }
